--- a/ruqqus/templates/settings.html
+++ b/ruqqus/templates/settings.html
@@ -34,10 +34,10 @@ Your reddit username "{{ v.reddit_username }}" has been verified with reddit.<br
 {% endif %}
 
 <form action="/settings" method="post">
-<input type="hidden" name="formkey", value="{{ v.formkey }}">
+<input type="hidden" name="formkey" value="{{ v.formkey }}">
 
 <h2>Change Password</h2>
-<input type="hidden" name="formkey", value="{{ v.formkey }}">
+<input type="hidden" name="formkey" value="{{ v.formkey }}">
 New Password:<br>
 <input type="password" name="new_password"><br>
 Confirm Password:<br>
@@ -50,6 +50,16 @@ Old Password:<br>
 <input type="checkbox" name="over18" {% if v.over_18 %}checked{% endif %}>I am over 18 and willing to view adult content.<br>
 <input type="submit" value="Save">
 </form>
+
+
+{% if v.is_activated == False %}
+<br>
+<h2>Resend Activation email</h2>
+<form action="/settings" method="post">
+<input type="hidden" name="formkey" value="{{ v.formkey }}">
+<input type="hidden" name="resend_activation"><input type="submit" value="Click here to resend the activation e-mail.">
+</form>
+{% endif %}
 
 
 {% endblock %}
