--- a/ruqqus/templates/header.html
+++ b/ruqqus/templates/header.html
@@ -27,7 +27,7 @@
       {% if v.notifications_count %}
 
       <li class="nav-item d-flex align-items-center text-center justify-content-center mx-1">
-        <a class="nav-link" href="/notifications" data-toggle="tooltip" data-placement="bottom" title="Notifications"><span class="text-danger"><i class="far fa-bell" data-toggle="tooltip" data-placement="bottom" data-delay='{"show":"700", "hide":"0"}' title="Notifications"></i>[{{ v.notifications_count }}]</a><span>
+        <a class="nav-link position-relative" href="/notifications" data-toggle="tooltip" data-placement="bottom" title="Notifications"><div class="text-white"><i class="far fa-bell" data-toggle="tooltip" data-placement="bottom" data-delay='{"show":"700", "hide":"0"}' title="Notifications"></i><span class="badge-count">{{ v.notifications_count }}</span></a><div>
       </li>
 
       {% else %}
