--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -8,13 +8,13 @@
   window.onscroll = function () {
     var currentScrollPos = window.pageYOffset;
     if (prevScrollpos > currentScrollPos) {
-      document.getElementById("fixed-bar-mobile").style.top = "49px";
+      document.getElementById("filter-bar-mobile").style.top = "49px";
     } 
     else if (currentScrollPos <= 125) {
-      document.getElementById("fixed-bar-mobile").style.top = "49px";
+      document.getElementById("filter-bar-mobile").style.top = "49px";
     }
     else {
-      document.getElementById("fixed-bar-mobile").style.top = "-98px";
+      document.getElementById("filter-bar-mobile").style.top = "-98px";
       document.getElementById("dropdownMenuSortBy").classList.remove('show');
       document.getElementById("dropdownMenuFrom").classList.remove('show');
     }
@@ -146,7 +146,7 @@
 {% block content %}
 <!-- Post filters bar visible only on medium devices or larger-->
 
-<div class="row fixed-top bg-white border-0 shadow d-inline-flex d-md-none p-3" id="fixed-bar-mobile" style="z-index: 100; top: 49px; transition: top 0.3s ease 0s;">
+<div class="row fixed-top bg-white border-0 shadow d-inline-flex d-md-none p-3" id="filter-bar-mobile" style="z-index: 100; top: 49px; transition: top 0.3s ease 0s;">
 
   <div class="col">
 
