--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -455,7 +455,7 @@ ol > li::before {
     color: $white;
 }
 
-#notifications .badge-count {
+.nav-link .badge-count {
     width: 20px;
     height: 20px;
     border-radius: 50rem;
