--- a/ruqqus/templates/header.html
+++ b/ruqqus/templates/header.html
@@ -33,7 +33,7 @@
       {% elif v.notifications_count > 9 %}
 
       <li class="nav-item d-flex align-items-center text-center justify-content-center mx-1">
-        <a class="nav-link position-relative" href="/notifications" data-toggle="tooltip" data-placement="bottom" title="Notifications"><i class="far fa-bell" data-toggle="tooltip" data-placement="bottom" data-delay='{"show":"700", "hide":"0"}' title="9+ notifications"></i><span class="badge-count">9+</span></a>
+        <a class="nav-link position-relative" href="/notifications" data-toggle="tooltip" data-placement="bottom" title="Notifications"><i class="far fa-bell" data-toggle="tooltip" data-placement="bottom" data-delay='{"show":"700", "hide":"0"}' title="9+ notifications"></i><span class="badge-count" style="width: 26px;">9+</span></a>
       </li>
 
       {% else %}
