new error templates

--- a/ruqqus/templates/errors/401.html
+++ b/ruqqus/templates/errors/401.html
@@ -4,6 +4,8 @@
 <title>401 Not Authorized</title>
 {% endblock %}
 
+{% block pagetype %}error-401{% endblock %}
+
 {% block content %}
 <div class="text-center py-7 py-md-8">
 
