--- a/ruqqus/templates/errors/500.html
+++ b/ruqqus/templates/errors/500.html
@@ -1,5 +1,7 @@
 {% extends "default.html" %}
 
+{% block pagetype %}error-500{% endblock %}
+
 {% block title %}
 <title>500</title>
 {% endblock %}
