--- a/ruqqus/templates/errors/400.html
+++ b/ruqqus/templates/errors/400.html
@@ -4,6 +4,8 @@
 <title>400 Bad Request</title>
 {% endblock %}
 
+{% block pagetype %}error-400{% endblock %}
+
 {% block content %}
 <h1>400 Bad Request</h1>
 <p>The rulers of the land might have been a bit more inclined to accommodate you... if you had only asked properly.</p>
