--- a/ruqqus/templates/errors/404.html
+++ b/ruqqus/templates/errors/404.html
@@ -17,18 +17,18 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Font Awesome -->
-    <link href="/assets/fontawesome/css/all.css" rel="stylesheet"> <!--load all styles -->
+    <script src="https://kit.fontawesome.com/e76eba0350.js" crossorigin="anonymous"></script>
 
     <script data-search-pseudo-elements defer src="https://use.fontawesome.com/releases/latest/js/all.js"
     integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7"
     crossorigin="anonymous"></script>
 
     <!-- Ruqqus CSS -->
-    <link rel="stylesheet" href="assets/style/main.css">
+    <link rel="stylesheet" href="/assets/style/main.css">
 
 </head>
 
-<body id="error">
+<body id="error-404">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent fixed-top d-none d-md-flex">
