--- a/ruqqus/templates/errors/405.html
+++ b/ruqqus/templates/errors/405.html
@@ -1,5 +1,7 @@
 {% extends "default.html" %}
 
+{% block pagetype %}error-405{% endblock %}
+
 {% block title %}
 <title>405 Method Not ALlowed</title>
 {% endblock %}
