--- a/ruqqus/templates/userpage_comments.html
+++ b/ruqqus/templates/userpage_comments.html
@@ -47,31 +47,61 @@
 
     </div>
 
-	<div class="row justify-content-around mx-lg-5 d-block d-lg-none no-gutters">
-        <div class="col bg-light border-bottom rounded-md p-3">
-            <div class="profile-details">
-                <h1 class="h6 d-inline-block mb-0 mr-2" style="color:#{{ u.color }}">@{{ u.username }}</h1>
-                <div class="profile-actions d-inline-block">
-                    <div class="dropdown show">
-                        <a href="#" role="button" id="dropdownProfileActionsLink" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-ellipsis-h"></i>
-                        </a>
-			{% if v and v.id != u.id %}
-                        <div class="dropdown-menu border-0 shadow py-1" aria-labelledby="dropdownMoreLink">
-                            <a class="dropdown-item" href="#"><i class="fas fa-paper-plane"></i>Message</a>
-                            <a class="dropdown-item" href="#"><i class="fas fa-flag"></i>Report</a>
-                        </div>
-			{% endif %}
-                    </div>
-                </div>
-                <div>
-                            {% if u.admin_level>=3 %}<span class="badge badge-pill badge-danger text-white">Admin</span>{% endif %}
-			    {% if u.real_id %}<span class="badge badge-pill text-white badge-info">{{ u.real_id }}</span>{% endif %}
-                </div>
-            </div>
-        </div>
+<div class="row justify-content-around mx-lg-5 d-block d-lg-none no-gutters">
+  <div class="col bg-light border-bottom rounded-md p-3">
+    <div class="profile-details text-center mt-3">
+     <div class="profile-pic mb-3" style="background-color:#{{ u.color }}">
+      <span class="letter">{{ u.username[0]  }}</span>
     </div>
+    <h1 class="h6 d-inline-block text-gray mb-3">@{{ u.username }}</h1>
+    <span>
+      {% if u.admin_level>=3 %}<i class="fad fa-badge-check text-success" data-toggle="tooltip" data-placement="bottom" title="Admin"></i>{% endif %}
+      {% if u.real_id %}<span class="badge badge-pill text-white badge-info">{{ u.real_id }}</span>{% endif %}
+    </span>
+    <p class="text-muted text-small px-3">
+      {{ u.bio_html | safe }}
+    </p>
+    <div class="profile-actions d-inline-block">
+      {% if v and v.id != u.id %}
+    <!-- Modal -->
+    <i class="fas fa-ellipsis-h" data-toggle="modal" data-target="#profileModal"></i>
+
+    <div class="modal fade" id="profileModal" tabindex="-1" role="dialog" aria-labelledby="Profile Actions" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="list-group">
+            <a href="/settings/profile#bio" class="list-group-item list-group-item-action"><i class="fas fa-paper-plane mr-2"></i>Message</a>
+              <a href="/settings/security" class="list-group-item list-group-item-action"><i class="fas fa-flag mr-2"></i>Flag</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% if v and v.id == u.id %}
+
+    <i class="fas fa-ellipsis-h" data-toggle="modal" data-target="#settingsModal"></i>
+
+    <!-- Modal -->
+    <div class="modal fade" id="settingsModal" tabindex="-1" role="dialog" aria-labelledby="Profile Actions" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="list-group">
+            <a href="/settings/profile#bio" class="list-group-item list-group-item-action"><i class="fas fa-user-circle mr-2"></i>Edit profile</a>
+              <a href="/settings/security" class="list-group-item list-group-item-action"><i class="fas fa-cog mr-2"></i>Account details</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endif %} 
+  </div>
+
+</div>
+</div>
+</div>
 
 
         <div class="flex-row tab-bar sticky d-none d-md-flex">
