--- a/ruqqus/templates/default.html
+++ b/ruqqus/templates/default.html
@@ -186,7 +186,7 @@
   </div>
 </div>
 
-<footer class="footer py-5">
+<footer class="footer py-5 d-none d-md-block">
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col">
