--- a/ruqqus/templates/header.html
+++ b/ruqqus/templates/header.html
@@ -108,12 +108,42 @@
     <li class="nav-item nav-item border-top mt-2 pt-2">
       <a class="nav-link" href="javascript:void(0)", onclick="post('/logout');window.location.href='https://ruqqus.com/'">Log out</a>
     </li>
+    <li class="nav-item nav-item border-top mt-2 pt-2">
+      <a class="nav-link text-small-extra" href="/about">About</a>
+    </li>
+    <li class="nav-item nav-item">
+      <a class="nav-link text-small-extra" href="/help/conduct">Terms</a>
+    </li>
+    <li class="nav-item nav-item">
+      <a class="nav-link text-small-extra" href="/about/privacy">Privacy</a>
+    </li>
+    <li class="nav-item nav-item">
+      <a class="nav-link text-small-extra" href="#">Contact</a>
+    </li>
+    <li class="nav-item nav-item">
+      <a class="nav-link text-small-extra" href="https://github.com/ruqqus/ruqqus">Github</a>
+    </li>
     {% else %}
     <li class="nav-item d-flex align-items-center justify-content-center pb-2">
       <a class="btn btn-white btn-block" href="/login">Sign in</a>
     </li>
     <li class="nav-item d-flex align-items-center justify-content-center">
       <a class="btn btn-outline-white btn-block" href="/signup">Sign up</a>
+    </li>
+        <li class="nav-item nav-item border-top mt-2 pt-2">
+      <a class="nav-link text-small-extra" href="/about">About</a>
+    </li>
+    <li class="nav-item nav-item">
+      <a class="nav-link text-small-extra" href="/help/conduct">Terms</a>
+    </li>
+    <li class="nav-item nav-item">
+      <a class="nav-link text-small-extra" href="/about/privacy">Privacy</a>
+    </li>
+    <li class="nav-item nav-item">
+      <a class="nav-link text-small-extra" href="#">Contact</a>
+    </li>
+    <li class="nav-item nav-item">
+      <a class="nav-link text-small-extra" href="https://github.com/ruqqus/ruqqus">Github</a>
     </li>
     {% endif %}
   </ul>
