--- a/ruqqus/templates/submission_banned.html
+++ b/ruqqus/templates/submission_banned.html
@@ -149,7 +149,7 @@
                         
                         <li id="voting-mobile" class="voting list-inline-item{% if voted==1 %} upvoted{% elif voted==-1 %} downvoted{% endif %}">
                             <span id="arrow-mobile-up" class="mr-2 arrow-mobile-up">
-                                <i class="fas fa-chevron-up mx-0"></i>
+                                <i class="fas fa-arrow-alt-up mx-0"></i>
                             </span>
 
 
@@ -160,7 +160,7 @@
 
 
                             <span id="arrow-mobile-down" class="arrow-mobile-down ml-2 my-0">
-                                <i class="fas fa-chevron-down mx-0"></i>
+                                <i class="fas fa-arrow-alt-down mx-0"></i>
                             </span>
                         </li>
 
