--- a/ruqqus/templates/submission_listing.html
+++ b/ruqqus/templates/submission_listing.html
@@ -103,7 +103,7 @@
     </li>
     <li id="voting-{{ p.base36id }}-mobile" class="voting list-inline-item d-md-none">
       <span id="arrow-{{ p.base36id }}-mobile-up" class="mr-2 arrow-mobile-up" onclick="vote('{{ p.base36id }}','0')">
-        <i class="fas fa-chevron-up mx-0" aria-hidden="true"></i>
+        <i class="fas fa-arrow-alt-up mx-0" aria-hidden="true"></i>
       </span>
 
 
@@ -114,7 +114,7 @@
 
 
       <span id="arrow-{{ p.base36id }}-mobile-down" class="arrow-mobile-down ml-2 my-0" onclick="vote('{{ p.base36id }}','-1')">
-        <i class="fas fa-chevron-down mx-0" aria-hidden="true"></i>
+        <i class="fas fa-arrow-alt-down mx-0" aria-hidden="true"></i>
       </span>
     </li>
   </ul>
