--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -122,6 +122,10 @@ $box-shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.1) !default;
 
 $box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(0, 0, 0, 0.05);
 
+// Tool Tips
+
+$tooltip-opacity: 1;
+
 // Color contrast
 
 $yiq-contrasted-threshold:  160 !default;
