--- a/ruqqus/templates/header.html
+++ b/ruqqus/templates/header.html
@@ -124,13 +124,13 @@
       <a class="nav-link text-small-extra" href="https://github.com/ruqqus/ruqqus">Github</a>
     </li>
     {% else %}
-    <li class="nav-item d-flex align-items-center justify-content-center pb-2">
+    <li class="nav-item d-flex align-items-center justify-content-center pb-3">
       <a class="btn btn-white btn-block" href="/login">Sign in</a>
     </li>
     <li class="nav-item d-flex align-items-center justify-content-center">
       <a class="btn btn-outline-white btn-block" href="/signup">Sign up</a>
     </li>
-        <li class="nav-item nav-item border-top mt-2 pt-2">
+        <li class="nav-item nav-item mt-2">
       <a class="nav-link text-small-extra" href="/about">About</a>
     </li>
     <li class="nav-item nav-item">
