--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -13283,6 +13283,16 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   display: none;
 }
 
+.post-img-overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.6);
+  bottom: 0;
+  padding: 0.25rem 0.5rem;
+  text-align: right;
+  width: 100%;
+  color: #ffffff;
+}
+
 @media (max-width: 767.98px) {
   .post-img {
     width: 80px;
