--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1251,6 +1251,16 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     display: none;
 }
 
+.post-img-overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
+    bottom: 0;
+    padding: .25rem .5rem;
+    text-align: right;
+    width: 100%;
+    color: $white;
+}
+
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) { 
     .post-img {
