--- a/ruqqus/templates/userpage_banned.html
+++ b/ruqqus/templates/userpage_banned.html
@@ -2,6 +2,10 @@
 
 {% block pagetype %}userpage{% endblock %}
 
+{% block enlargeThumbJS %}
+<script src="/assets/js/enlarge_thumb.js"></script>
+{% endblock %}
+
 {% block fixedMobileBarJS %}
     <script>
     var prevScrollpos = window.pageYOffset;
