#userpage thumb enlarge css

--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1958,7 +1958,7 @@ body {
     z-index: 3;
 }
 
-#frontpage .posts .card.enlarged .post-img-lg {
+#frontpage .posts .card.enlarged .post-img-lg, #userpage .posts .card.enlarged .post-img-lg {
     display: block;
 }
 
