--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -14365,7 +14365,7 @@ pre .clo, pre .opn, pre .pun, code .clo, code .opn, code .pun {
     z-index: 3;
   }
 
-  #frontpage .posts .card.enlarged .post-img-lg {
+  #frontpage .posts .card.enlarged .post-img-lg, #userpage .posts .card.enlarged .post-img-lg {
     display: block;
   }
 
