--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -186,8 +186,9 @@
 
     <div class="row no-gutters mt-3 d-block d-md-none">
         <div class="col">
-           <a target="_blank" href="{{ p.url }}">{% if p.url.endswith((".jpg",".png")) %}<img src="{{ p.url }}" class="img-fluid" alt="post image">{% endif %}
+           <a target="_blank" href="{{ p.url }}">{% if p.url.endswith((".jpg",".png")) %}<img src="{{ p.url }}" class="img-fluid" alt="post image">
            <div class="post-img-overlay d-block d-md-none">{{ p.domain }}<i class="fas fa-external-link-alt text-small ml-2"></i></div>
+           {% endif %}
            </a>
        </div>
    </div>
