--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -752,26 +752,32 @@ label.terms {
     min-width: 40px;
 }
 
-.arrow-up {
+.arrow-up::before {
     cursor: pointer;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-bottom: 12px solid $gray-400;
-    width: 0;
-    height: 0;
-    position: relative;
-    top: -5px;
+    color: $gray-400;
+    font-family: "Font Awesome 5 Pro";
+    content: "\f077";
 }
 
-.arrow-down {
+.arrow-down::before {
     cursor: pointer;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-top: 12px solid $gray-400;
-    width: 0;
-    height: 0;
-    position: relative;
-    bottom: -5px;
+    color: $gray-400;
+    font-family: "Font Awesome 5 Pro";
+    content: "\f078";
+}
+
+.upvoted .arrow-up::before {
+    cursor: pointer;
+    color: $upvote;
+    font-family: "Font Awesome 5 Pro";
+    content: "\f357";
+}
+
+.downvoted .arrow-down::before {
+    cursor: pointer;
+    color: $downvote;
+    font-family: "Font Awesome 5 Pro";
+    content: "\f354";
 }
 
 .comment-actions .arrow-up {
@@ -780,16 +786,6 @@ label.terms {
 
 .comment-actions .arrow-down {
     bottom: 0;
-}
-
-.upvoted .arrow-up {
-    cursor: pointer;
-    border-bottom: 12px solid $upvote;
-}
-
-.downvoted .arrow-down {
-    cursor: pointer;
-    border-top: 12px solid $downvote;
 }
 
 .upvoted .arrow-mobile-up {
@@ -1951,7 +1947,7 @@ body {
 }
 
 #frontpage .posts .card:hover {
-    background-color: none;
+    background-color: transparent;
 }
 
 #frontpage .posts .card .post-img {
