--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -12811,14 +12811,14 @@ label.terms {
   cursor: pointer;
   color: #C2C2C2;
   font-family: "Font Awesome 5 Pro";
-  content: "";
+  content: "";
 }
 
 .arrow-down::before {
   cursor: pointer;
   color: #C2C2C2;
   font-family: "Font Awesome 5 Pro";
-  content: "";
+  content: "";
 }
 
 .upvoted .arrow-up::before {
