remove focus outline from voting arrows

--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -12807,6 +12807,10 @@ label.terms {
   min-width: 40px;
 }
 
+.voting div:focus {
+  outline: 0;
+}
+
 .arrow-up::before {
   cursor: pointer;
   color: #C2C2C2;
