fa solid icon font-weight set to 900
FA requires pseudo element font-weight set to 900 for solid icons

--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -761,6 +761,7 @@ label.terms {
     font-size: $font-size-base;
     color: $gray-400;
     font-family: "Font Awesome 5 Pro";
+    font-weight: 900;
     content: "\f357";
 
 }
@@ -770,6 +771,7 @@ label.terms {
     font-size: $font-size-base;
     color: $gray-400;
     font-family: "Font Awesome 5 Pro";
+    font-weight: 900;
     content: "\f354";
 }
 
