--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -12816,6 +12816,7 @@ label.terms {
   font-size: 1rem;
   color: #C2C2C2;
   font-family: "Font Awesome 5 Pro";
+  font-weight: 900;
   content: "";
 }
 
@@ -12824,6 +12825,7 @@ label.terms {
   font-size: 1rem;
   color: #C2C2C2;
   font-family: "Font Awesome 5 Pro";
+  font-weight: 900;
   content: "";
 }
 
