--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1,6 +1,6 @@
 // Colors
 
-$primary: #6350CC;
+$primary: #603abb;
 $dark: #1F2041;
 $secondary: #EAEAEA;
 $danger: #F05D5E;
@@ -22,7 +22,7 @@ $gray-400: #C2C2C2;
 $gray-500: #adb5bd;
 $gray-600: #ACACAC;
 
-$upvote: #6350CC;
+$upvote: #603abb;
 $downvote: #48A9A6;
 $admin: #F05D5E;
 $banned: #FF9999;
