frontpage form control

--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -12936,7 +12936,7 @@ a:hover .link-arrow {
 }
 
 #frontpage .pseudo-submit-form.card .card-body .form-control {
-  background-color: #FAFAFA;
+  background-color: #F1F1F1;
 }
 
 #frontpage .pseudo-submit-form.card .card-body .form-control:active, #frontpage .pseudo-submit-form.card .card-body .form-control:focus {
