--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -892,7 +892,7 @@ color: $dark;
 }
 
 #frontpage .pseudo-submit-form.card .card-body .form-control {
-    background-color: $light;
+    background-color: $gray-100;
 }
 
 #frontpage .pseudo-submit-form.card .card-body .form-control:active, #frontpage .pseudo-submit-form.card .card-body .form-control:focus {
