--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1475,6 +1475,7 @@ ul.comment-section {
 .comment.collapsed .comment-collapse::before {
     content: "\f138";
     font-family: "Font Awesome 5 Pro";
+    font-weight: 900;
     border-left: none;
     color: $gray-500;
     top: 3px;
