bg color for login page

--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -13601,6 +13601,7 @@ ul.comment-section {
   padding-top: 0;
   height: 100%;
   overflow: hidden;
+  background-color: #ffffff;
 }
 
 .splash-wrapper {
