--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1581,6 +1581,7 @@ ul.comment-section {
     padding-top: 0;
     height: 100%;
     overflow: hidden;
+    background-color: $white;
 }
 
 .splash-wrapper {
