update bio link

--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -78,7 +78,7 @@
     {{ u.bio_html | safe }}
   </p>
   {% if v and v.id == u.id %}
-  <div><a class="btn btn-secondary btn-block btn-sm" href="/settings/profile">Update bio</a></div>
+  <div><a class="btn btn-secondary btn-block btn-sm" href="/settings/profile#bio">Update bio</a></div>
   {% endif %}
   <hr>
   {% endif %}
