badge font size

--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -466,7 +466,7 @@ ol > li::before {
     background-color: $danger;
     position: absolute;
     color: $white;
-    font-size: $extra-small-font-size;
+    font-size: 11px;
     font-weight: $font-weight-medium;
     top: -6px;
     left: 14px;
