--- a/ruqqus/templates/sign_up.html
+++ b/ruqqus/templates/sign_up.html
@@ -78,6 +78,7 @@
 
                                 <input type="hidden" name="formkey" value="{{ formkey }}">
                                 <input type="hidden" name="now" value="{{ now }}">
+				<input type="hidden" name="redirect" value="{{ redirect }}">
 
                                 <label for="username" class="mt-3">Username</label>
 
