--- a/ruqqus/templates/header.html
+++ b/ruqqus/templates/header.html
@@ -14,7 +14,7 @@
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"><i class="fal fa-bars text-white" style="font-size: 2rem;"></i></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto d-none d-md-flex">
