--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -12420,6 +12420,10 @@ ol > li::before {
   font-size: 1rem;
 }
 
+.navbar-toggler-icon {
+  background-image: none;
+}
+
 .navbar-expand-md .navbar-nav .nav-link {
   padding-left: 1rem;
   padding-right: 1rem;
