--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -12420,11 +12420,11 @@ ol > li::before {
   font-size: 1rem;
 }
 
-.navbar-toggler-icon {
+.navbar-toggler-icon, .navbar-dark .navbar-toggler-icon, .navbar-light .navbar-toggler-icon {
   background-image: none;
 }
 
-.navbar-toggler {
+.navbar-toggler, .navbar-dark .navbar-toggler, .navbar-light .navbar-toggler {
   border: none;
 }
 
