comment write bg color focus, active states

--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -13453,6 +13453,10 @@ ul.comment-section {
   margin-top: 1.5rem;
 }
 
+.comment-write.collapsed textarea:focus, .comment-write.collapsed textarea:active {
+  background-color: #F1F1F1;
+}
+
 .comment-write.collapsed textarea {
   width: 100%;
   box-sizing: border-box;
