--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -48,7 +48,7 @@
       <i class="fas fa-ellipsis-h"></i>
     </a>
 
-    <div class="dropdown-menu border-0 shadow" aria-labelledby="dropdownMoreLink">
+    <div class="dropdown-menu dropdown-menu-right border-0 shadow" aria-labelledby="dropdownMoreLink">
       <a class="dropdown-item" href="#"><i class="fas fa-paper-plane"></i>Message</a>
       <a class="dropdown-item" href="#"><i class="fas fa-flag"></i>Report</a>
     </div>
@@ -61,7 +61,7 @@
     <i class="fas fa-ellipsis-h"></i>
   </a>
 
-  <div class="dropdown-menu border-0 shadow" aria-labelledby="dropdownMoreLink">
+  <div class="dropdown-menu dropdown-menu-right border-0 shadow" aria-labelledby="dropdownMoreLink">
     <a class="dropdown-item" href="/settings/profile#bio"><i class="fas fa-user-circle"></i>Edit profile</a>
     <a class="dropdown-item" href="/settings/security"><i class="fas fa-cog"></i>Account details</a>
   </div>
