--- a/ruqqus/templates/settings_profile.html
+++ b/ruqqus/templates/settings_profile.html
@@ -148,10 +148,11 @@
 
 <input type="hidden" name="formkey" value="{{ v.formkey }}">
 
-                                    <div class="body">
+                                    <div class="body d-md-flex">
 
-                                        <label for="bio" class="text-black">Bio</label>
+                                        <label for="bio" class="text-black w-md-25">Bio</label>
 
+                                        <div class="w-md-75">
                                         <div class="input-group mb-2">
                                             <textarea class="form-control" id="bio" aria-label="With textarea"
                                                 placeholder="Tell the Ruqqus community a bit about yourself."
@@ -159,6 +160,8 @@
                                         </div>
 
                                         <small>Limit of 280 characters</small>
+
+                                        </div>
 
                                     </div>
 
