increase breakpoint to "lg" desktop devices

--- a/ruqqus/templates/settings_profile.html
+++ b/ruqqus/templates/settings_profile.html
@@ -150,9 +150,9 @@
 
                                     <div class="body d-md-flex">
 
-                                        <label for="bio" class="text-black w-md-25">Bio</label>
+                                        <label for="bio" class="text-black w-lg-25">Bio</label>
 
-                                        <div class="w-md-75">
+                                        <div class="w-lg-75">
                                         <div class="input-group mb-2">
                                             <textarea class="form-control" id="bio" aria-label="With textarea"
                                                 placeholder="Tell the Ruqqus community a bit about yourself."
