--- a/ruqqus/templates/settings_profile.html
+++ b/ruqqus/templates/settings_profile.html
@@ -67,7 +67,7 @@
 
             <div class="settings-section rounded">
 
-                <div class="d-flex-lg">
+            <div class="d-lg-flex">
 
                     {% if v.reddit_username %}
 
@@ -87,7 +87,7 @@
                         </button>
                         <span class="text-small-extra text-muted">You are linked with Reddit profile <a target="blank"
                             href="https://reddit.com/user/{{ v.reddit_username }}">/u/{{ v.reddit_username }}</a>.</span>
-                            
+
 
                         </form>
 
