--- a/ruqqus/templates/settings_profile.html
+++ b/ruqqus/templates/settings_profile.html
@@ -88,8 +88,8 @@
 
                         </form>
 
-                        <span class="text-small-extra text-muted">You are linked with Reddit profile <a target="blank"
-                        href="https://reddit.com/user/{{ v.reddit_username }}">/u/{{ v.reddit_username }}</a>.</span>
+                        <div class="text-small-extra text-muted mt-3">You are linked with Reddit profile <a target="blank"
+                        href="https://reddit.com/user/{{ v.reddit_username }}">/u/{{ v.reddit_username }}</a>.</div>
 
                     </div>
 
@@ -108,7 +108,7 @@
                             <span class="align-middle">Link Reddit</span>
                         </button>
                         </a>
-                    <span class="text-small-extra text-muted">You are not linked to a Reddit profile.</span>
+                    <div class="text-small-extra text-muted mt-3">You are not linked to a Reddit profile.</div>
 
                 </div>
 
