--- a/ruqqus/templates/settings_security.html
+++ b/ruqqus/templates/settings_security.html
@@ -70,39 +70,39 @@
 
                                 <form action="/settings/security" method="post">
 
-                                    <div class="body">
+                                    <div class="body d-lg-flex">
 
-                                        <label for="new_password">New Password</label>
+                                        <label for="new_password" class="w-lg-25">New Password</label>
 
-                                        <input class="form-control" id="new_password"
+                                        <input class="form-control w-lg-75" id="new_password"
                                             aria-describedby="new_password" type="password" name="new_password"
                                             required>
                                         <small id="passwordHelpChange"
-                                            class="form-text font-weight-bold text-muted d-none mt-1">Minimum of 8
+                                            class="form-text font-weight-bold text-muted d-none mt-1 w-lg-75">Minimum of 8
                                             characters
                                             required.</small>
                                         <small id="passwordHelpChangeSuccess"
-                                            class="form-text font-weight-bold text-success d-none mt-1">Your password
+                                            class="form-text font-weight-bold text-success d-none mt-1 w-lg-75">Your password
                                             meets the
                                             requirements.
                                         </small>
 
-                                        <label for="cnf_password" class="mt-3">Confirm New Password</label>
+                                        <label for="cnf_password" class="mt-3 w-lg-25">Confirm New Password</label>
 
-                                        <input class="form-control" id="cnf_password"
+                                        <input class="form-control w-lg-75" id="cnf_password"
                                             aria-describedby="cnf_password" type="password" name="cnf_password"
                                             required>
 
                                         <small id="passwordHelpCnf"
-                                            class="form-text font-weight-bold text-muted d-none mt-1">Passwords do not
+                                            class="form-text font-weight-bold text-muted d-none mt-1 w-lg-75">Passwords do not
                                             match.</small>
                                         <small id="passwordHelpCnfSuccess"
-                                            class="form-text font-weight-bold text-success d-none mt-1">Passwords match.
+                                            class="form-text font-weight-bold text-success d-none mt-1 w-lg-75">Passwords match.
                                         </small>
 
-                                        <label for="old_password" class="mt-3">Old Password</label>
+                                        <label for="old_password" class="mt-3 w-lg-25">Old Password</label>
 
-                                        <input class="form-control mb-2" id="old_password"
+                                        <input class="form-control mb-2 w-lg-75" id="old_password"
                                             aria-describedby="old_password" type="password" name="old_password"
                                             required>
 
@@ -135,12 +135,11 @@
                                 <form  action="/settings/security" method="post">
 				<input type="hidden" name="formkey" value="{{ v.formkey }}">
 
-
-                                    <div class="body">
+                                    <div class="body d-lg-flex">
                                      
-                                        <label for="new-email">Email</label>
+                                        <label for="new-email" class="w-lg-25">Email</label>
 
-                                        <input autocomplete="new-password" class="form-control mb-2" id="new_email" placeholder="{{ v.email }}"
+                                        <input autocomplete="new-password" class="form-control w-lg-75" id="new_email" placeholder="{{ v.email }}"
                                             aria-describedby="new_email" type="email" name="new_email" required>
                                             {% if not v.is_activated %}
                                             <div class="text-danger text-small-extra mt-1" id="email-verify-text">Email not verified. <u><a href="javascript:void(0)" onclick="post('/api/verify_email');emailVerifyText();" class="text-danger">Verify now.</a></u></div>
