--- a/ruqqus/templates/settings_security.html
+++ b/ruqqus/templates/settings_security.html
@@ -70,7 +70,9 @@
 
                                 <form action="/settings/security" method="post">
 
-                                    <div class="body d-lg-flex">
+                                    <div class="body">
+
+                                    <div class="d-lg-flex">
 
                                         <label for="new_password" class="w-lg-25">New Password</label>
 
@@ -87,6 +89,10 @@
                                             requirements.
                                         </small>
 
+                                    </div>
+
+                                    <div class="d-lg-flex">
+
                                         <label for="cnf_password" class="mt-3 w-lg-25">Confirm New Password</label>
 
                                         <input class="form-control w-lg-75" id="cnf_password"
@@ -100,11 +106,17 @@
                                             class="form-text font-weight-bold text-success d-none mt-1 w-lg-75">Passwords match.
                                         </small>
 
+                                    </div>
+
+                                    <div class="d-lg-flex">
+
                                         <label for="old_password" class="mt-3 w-lg-25">Old Password</label>
 
                                         <input class="form-control mb-2 w-lg-75" id="old_password"
                                             aria-describedby="old_password" type="password" name="old_password"
                                             required>
+
+                                    </div>
 
                                     </div>
 
